--- a/src/app/components/image-gallery/image-gallery.component.html
+++ b/src/app/components/image-gallery/image-gallery.component.html
@@ -21,5 +21,7 @@
 
     <i class="fa fa-arrow-right fa-2x ml-5 mouseoverVisible" aria-hidden="true" (click)="incrementVisibleImageIndex()"></i>
 
-
+    <app-confirm-deletion
+    [triggerConfirmationRequest]="triggeredDeletion"
+    ></app-confirm-deletion>
 </div>
