--- a/src/app/components/articles/character-article/character-article.component.scss
+++ b/src/app/components/articles/character-article/character-article.component.scss
@@ -17,3 +17,14 @@ article{
 h2{
     letter-spacing: 0.5rem;
 }
+
+.delete-request{
+    border: 1px solid red;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    border-radius: 4px;
+    background-color:rgba(27, 31, 34, 0.85);
+    padding: 0.5rem 1rem;
+    justify-content: flex-end;
+}
