--- a/src/app/components/image-gallery/image-gallery.component.html
+++ b/src/app/components/image-gallery/image-gallery.component.html
@@ -2,26 +2,62 @@
     <i class="fa fa-arrow-left fa-2x mr-5 mouseoverVisible" aria-hidden="true" (click)="decreaseVisibleImageIndex()"></i>
 
     <div class="image-container">
-        <a [href]="image_url"
-        *ngFor="let image_url of image_urls; let i = index"
-        [attr.data-index]="i"
-        (keydown)=changeImageIndex($event)
-        [ngClass]="{'main-image': visibleImageIndex === i, 
-                    'side-image': visibleImageIndex !== i}"
+        <a [href]="image.image"
+        *ngFor="let image of images; let i = index"
+        (keydown)="changeMainImage($event)"
+        [ngClass]="{'main-image': i === visibleImageIndex, 
+                    'side-image': i !== visibleImageIndex}"
         >
-            <img title="None" class="gallery-image" [src]="image_url" alt="">
+            <img title="None" class="gallery-image" [src]="image.image" alt="">
         </a>
     
         <div class="edit-image-buttons">
-            <i class="fa fa-plus-square-o fa-2x" aria-hidden="true"></i>
-            <i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i>
-            <i class="fa fa-trash fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-plus-square-o fa-2x" aria-hidden="true" (click)="showCreateModal(requestModal)"></i>
+            <i class="fa fa-pencil-square-o fa-2x" aria-hidden="true" (click)="showUpdateModal(requestModal)"></i>
+            <i 
+            [ngClass]="{'fa fa-trash fa-2x': true, 'deactivated-icon': images.length === 1}"
+            aria-hidden="true"
+            (click)="showDeleteModal(requestModal)"
+            ></i>
         </div>
     </div>
 
     <i class="fa fa-arrow-right fa-2x ml-5 mouseoverVisible" aria-hidden="true" (click)="incrementVisibleImageIndex()"></i>
 
-    <app-confirm-deletion
-    [triggerConfirmationRequest]="triggeredDeletion"
-    ></app-confirm-deletion>
-</div>
+    <!-- Modal Templates for Image Manipulation -->
+    <ng-template #requestModal let-cl="close" let-di="dismiss">  
+        <div class="modal-content"> 
+    
+            <div class="modal-header">  
+                <h5 class="modal-title">Confirmation Request</h5>
+                <button type="button" class="close" (click)="di()">  
+                    <i class="fa fa-times"></i>
+                </button> 
+            </div>  
+    
+            <div class="modal-body">
+
+                <form *ngIf="activeModalState===constants.createState || activeModalState===constants.updateState">
+                    <div class="form-group">
+                        <label for="image_name">Image Name</label>
+                        <input type="text" class="form-control" id="image_name" name="image_name" [(ngModel)]="formImageData.name"  >
+                    </div>
+
+                    <div class="form-group">
+                        <label for="image_name">Image Url</label>
+                        <input type="text" class="form-control" id="image_url" name="image_url" [(ngModel)]="formImageData.image" >
+                    </div>
+                </form>
+
+                <p *ngIf="activeModalState===constants.deleteState">Do you really want to delete <strong>{{ images[visibleImageIndex].name }}</strong> ?</p>  
+            </div>  
+    
+            <div class="modal-footer"> 
+                <button type="button" class="btn btn-secondary" (click)="di(l)"> Cancel </button> 
+                <button type="button" *ngIf="activeModalState===constants.deleteState" class="btn btn-outline-danger" (click)="cl(constants.deleteSignal)"> Delete </button> 
+                <button type="button" *ngIf="activeModalState===constants.createState" class="btn btn-outline-success" (click)="cl(constants.createSignal)"> Save </button> 
+                <button type="button" *ngIf="activeModalState===constants.updateState" class="btn btn-outline-info" (click)="cl(constants.updateSignal)"> Update </button> 
+            </div> 
+    
+        </div>  
+    </ng-template>
