--- a/src/app/components/utility/textfield/textfield.component.html
+++ b/src/app/components/utility/textfield/textfield.component.html
@@ -1,7 +1,7 @@
 <h4> {{ heading }} 
-    <i *ngIf="!isEditState" (click)="enableEdit()" class="fa fa-pencil ml-2"></i>
-    <i *ngIf="isEditState" (click)="cancelEdit()" class="fa fa-times ml-2"></i>
-    <i *ngIf="isEditState" (click)="finishEdit()" class="fa fa-check ml-2"></i>
+    <i *ngIf="!isEditState" (click)="enableEdit()" class="fa icon fa-pencil ml-2"></i>
+    <i *ngIf="isEditState" (click)="cancelEdit()" class="fa icon fa-times ml-2"></i>
+    <i *ngIf="isEditState" (click)="finishEdit()" class="fa icon fa-check ml-2"></i>
 </h4>
 <form>
     <div class="textfield">
