--- a/src/app/components/utility/image-gallery/image-gallery.component.scss
+++ b/src/app/components/utility/image-gallery/image-gallery.component.scss
@@ -73,3 +73,11 @@ div:hover .edit-image-buttons, div:hover .mouseoverVisible{
     opacity: 0;
     cursor: default;
 }
+
+a{
+    border-bottom: none;
+}
+
+a:hover{
+    border-bottom: none;
+}
