--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -58,3 +58,11 @@
         display: '';
     }
 }
+
+.navbar-brand{
+    border-bottom: none;
+}
+
+.navbar-brand:hover{
+    border-bottom: none;
+}
