--- a/src/app/components/utility/image-gallery/image-gallery.component.html
+++ b/src/app/components/utility/image-gallery/image-gallery.component.html
@@ -1,5 +1,7 @@
 <div class="image-area mb-5">
-    <i class="fa fa-arrow-left fa-2x mr-5 mouseoverVisible" aria-hidden="true" (click)="decreaseVisibleImageIndex()"></i>
+    <i [ngClass]="{'fa fa-arrow-left fa-2x mr-5': true, 'mouseoverVisible': !isLastImage(), 'deactivated-icon': isLastImage()}" 
+    aria-hidden="true"
+    (click)="decreaseVisibleImageIndex()"></i>
 
     <div class="image-container">
         <a [href]="image.image"
@@ -15,14 +17,16 @@
             <i class="fa fa-plus-square-o fa-2x" aria-hidden="true" (click)="showCreateModal(requestModal)"></i>
             <i class="fa fa-pencil-square-o fa-2x" aria-hidden="true" (click)="showUpdateModal(requestModal)"></i>
             <i 
-            [ngClass]="{'fa fa-trash fa-2x': true, 'deactivated-icon': images.length === 1}"
+            [ngClass]="{'fa fa-trash fa-2x': true, 'deactivated-icon': isLastImage()}"
             aria-hidden="true"
             (click)="showDeleteModal(requestModal)"
             ></i>
         </div>
     </div>
 
-    <i class="fa fa-arrow-right fa-2x ml-5 mouseoverVisible" aria-hidden="true" (click)="incrementVisibleImageIndex()"></i>
+    <i [ngClass]="{'fa fa-arrow-right fa-2x ml-5': true, 'mouseoverVisible': !isLastImage(), 'deactivated-icon': isLastImage()}" 
+    aria-hidden="true" 
+    (click)="incrementVisibleImageIndex()"></i>
 
     <!-- Modal Templates for Image Manipulation -->
     <ng-template #requestModal let-cl="close" let-di="dismiss">  
@@ -44,7 +48,8 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="image_name">Image Url</label>
+                        <label for="image_url">Choose File</label>
+                        <input type="file" id="file" (change)="handleFileInput($event.target.files)">
                         <input type="text" class="form-control" id="image_url" name="image_url" [(ngModel)]="formImageData.image" >
                     </div>
                 </form>
