--- a/src/app/components/articles/character-article/character-article.component.html
+++ b/src/app/components/articles/character-article/character-article.component.html
@@ -14,8 +14,8 @@
         </div>
 
         <app-image-gallery
-        [article_pk]="this.character.pk"
         [article_type]="this.articleType"
+        [images]="this.character.images"
         ></app-image-gallery>
 
         <!-- TODO: Implement a quote DB. A random quote of that selection shall be displayed as some sort of quote card -->
