--- a/src/app/components/utility/image-gallery/image-gallery.component.html
+++ b/src/app/components/utility/image-gallery/image-gallery.component.html
@@ -4,13 +4,13 @@
     (click)="decreaseVisibleImageIndex()"></i>
 
     <div class="image-container">
-        <a [href]="image.image"
+        <a [href]="image.url"
         *ngFor="let image of images; let i = index"
         (keydown)="changeMainImage($event)"
         [ngClass]="{'main-image': i === visibleImageIndex, 
                     'side-image': i !== visibleImageIndex}"
         >
-            <img title="None" class="gallery-image" [src]="image.image" alt="">
+            <img title="None" class="gallery-image" [src]="image.url" alt="">
         </a>
     
         <div class="edit-image-buttons">
@@ -48,9 +48,10 @@
                     </div>
 
                     <div class="form-group">
+                        <!-- TODO: Handle File Input -->
                         <label for="image_url">Choose File</label>
                         <input type="file" id="file" (change)="handleFileInput($event.target.files)">
-                        <input type="text" class="form-control" id="image_url" name="image_url" [(ngModel)]="formImageData.image" >
+                        <input type="text" class="form-control" id="image_url" name="image_url" [(ngModel)]="formImageData.url" >
                     </div>
                 </form>
 
