--- a/src/app/custom_bootstrap.scss
+++ b/src/app/custom_bootstrap.scss
@@ -15,3 +15,8 @@ button.btn.btn-link:focus{
     width: 100%;
     text-align: left;
 }
+
+.spinner-border{
+    width: 5rem !important;
+    height: 5rem !important;
+}
