--- a/src/styles.scss
+++ b/src/styles.scss
@@ -208,19 +208,18 @@ a:hover{
 }
 
 .main{
-    display: flex;
-    justify-content: center;
-}
-
-article{
     width: 60rem;
     max-width: 100%;
     background-color:rgba(27, 31, 34, 0.85);
     border-radius: 4px;
-    margin-top: 2rem;
-    padding: 2.5rem;
+	margin: 2rem auto 2rem auto;
+    padding: 2.5rem 2.5rem 5rem 2.5rem;
     color: white;
-    font-size: 18px;
+	font-size: 18px;
+}
+
+article{
+	width: 100%;
 }
 
 h2{
