--- a/src/app/custom_bootstrap.scss
+++ b/src/app/custom_bootstrap.scss
@@ -20,3 +20,37 @@ button.btn.btn-link:focus{
     width: 5rem !important;
     height: 5rem !important;
 }
+
+
+.form-control{
+    height: 2.75rem;
+    font-size: 1.2rem;
+}
+
+input{
+    background-color: transparent !important;
+    color: white !important;
+}
+
+input:focus{
+    background-color: transparent;
+    box-shadow: 3px blue;
+    color: white;
+}
+
+select{
+    color: white !important;
+    background-color: #4c4c4c !important;
+}
+
+select:focus{
+    background-color: #4c4c4c;
+    box-shadow: 3px blue;
+    color: white;
+}
+
+option{
+    background-color: #1b1f22;
+    color: white;
+    font-size: 18px;
+}
